# gimgo2

./: .gitignore  Library.cpp  Library.h  Playlist.cpp  README.md  Song.cpp  Song.h  sy.cpp  sy.h  상영.cpp  소스1.cpp
MusicPlayer/: CMakeLists.txt  CMakeUserPresets.json  DialogButtonBottom.ui  Library.cpp  Library.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayerWindow.cpp  PlayerWindow.h  PlayerWindow.ui  Playlist.h  SongListsDialog.cpp  SongListsDialog.h  SongListsDialog.ui  icons.qrc  main.cpp
MusicPlayerUI/MusicPlayer/: CMakeLists.txt  CMakeUserPresets.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  MusicPlayer.cpp  MusicPlayer.h  MusicPlayer.sln  MusicPlayer.ui  MusicPlayer.vcxproj  MusicPlayer.vcxproj.filters  main.cpp
